--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.89.0",
     "html-to-image": "^1.11.13",
+    "idb-keyval": "^6.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
